; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_buffer.c_cont_write_begin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_buffer.c_cont_write_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.address_space = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.page = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cont_write_begin(%struct.file* %0, %struct.address_space* %1, i32 %2, i32 %3, i32 %4, %struct.page** %5, i8** %6, i32* %7, i32* %8) #0 {
  %10 = alloca %struct.file*, align 8
  %11 = alloca %struct.address_space*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.page**, align 8
  %16 = alloca i8**, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %10, align 8
  store %struct.address_space* %1, %struct.address_space** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store %struct.page** %5, %struct.page*** %15, align 8
  store i8** %6, i8*** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32* %8, i32** %18, align 8
  %21 = load %struct.file*, %struct.file** %10, align 8
  %22 = load %struct.address_space*, %struct.address_space** %11, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load %struct.page**, %struct.page*** %15, align 8
  %27 = load i8**, i8*** %16, align 8
  %28 = load i32*, i32** %17, align 8
  %29 = load i32*, i32** %18, align 8
  %30 = call i32 @cont_write_begin_newtrunc(%struct.file* %21, %struct.address_space* %22, i32 %23, i32 %24, i32 %25, %struct.page** %26, i8** %27, i32* %28, i32* %29)
  store i32 %30, i32* %19, align 4
  %31 = load i32, i32* %19, align 4
  %32 = call i64 @unlikely(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %52

34:                                               ; preds = %9
  %35 = load %struct.address_space*, %struct.address_space** %11, align 8
  %36 = getelementptr inbounds %struct.address_space, %struct.address_space* %35, i32 0, i32 0
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  store i32 %39, i32* %20, align 4
  %40 = load i32, i32* %12, align 4
  %41 = load i32, i32* %13, align 4
  %42 = add i32 %40, %41
  %43 = load i32, i32* %20, align 4
  %44 = icmp ugt i32 %42, %43
  br i1 %44, label %45, label %51

45:                                               ; preds = %34
  %46 = load %struct.address_space*, %struct.address_space** %11, align 8
  %47 = getelementptr inbounds %struct.address_space, %struct.address_space* %46, i32 0, i32 0
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %47, align 8
  %49 = load i32, i32* %20, align 4
  %50 = call i32 @vmtruncate(%struct.TYPE_2__* %48, i32 %49)
  br label %51

51:                                               ; preds = %45, %34
  br label %52

52:                                               ; preds = %51, %9
  %53 = load i32, i32* %19, align 4
  ret i32 %53
}

declare dso_local i32 @cont_write_begin_newtrunc(%struct.file*, %struct.address_space*, i32, i32, i32, %struct.page**, i8**, i32*, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @vmtruncate(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
